Initial push or update project

--- a/contact.html
+++ b/contact.html
@@ -1171,13 +1171,22 @@
                               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-16 current_page_item parent hfe-creative-menu">
                               <a href="/" class="hfe-menu-item">Home</a>
                             </li>
-                            <li id="menu-item-22"
-                              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
-                              <a href="./index.html#features" class="hfe-menu-item">Features</a>
-                            </li>
+                            <!-- <li
+                                id="menu-item-22"
+                                class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
+                                <a
+                                  href="./index.html#features"
+                                  class="hfe-menu-item"
+                                  >Features</a
+                                >
+                              </li> -->
                             <li id="menu-item-23"
                               class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
                               <a href="./index.html#highlights" class="hfe-menu-item">Highlights</a>
+                            </li>
+                            <li id="menu-item-23"
+                              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
+                              <a href="./services.html" class="hfe-menu-item">Services</a>
                             </li>
                             <li id="menu-item-24"
                               class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu">
@@ -1453,12 +1462,12 @@
                     data-id="f939895" data-element_type="widget" data-widget_type="text-editor.default">
                     <div class="elementor-widget-container">
                       <p>
-                        Got questions or need help? Contact us by phone, email, or through our form, and we’ll get back
-                        to you quickly.
+                        Got questions or need help? Contact us by phone,
+                        email, or through our form, and we’ll get back to you
+                        quickly.
                       </p>
                     </div>
                   </div>
-
 
                   <div class="elementor-element elementor-element-488698e elementor-widget elementor-widget-shortcode"
                     data-id="488698e" data-element_type="widget" data-widget_type="shortcode.default">
@@ -1486,9 +1495,6 @@
                         </div>
                       </div>
                     </div>
-
-
-
                   </div>
                   <div class="elementor-element elementor-element-a099678 e-con-full contact_info e-flex e-con e-child"
                     data-id="a099678" data-element_type="container">
@@ -1527,7 +1533,7 @@
                         class="elementor-element elementor-element-89b180d elementor-widget elementor-widget-text-editor"
                         data-id="89b180d" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                          <a href="tel:+14165201372">+1 (416) 520-1372</a>
+                          <a href="tel:+16475404488">+1 (647) 540-4488</a>
                         </div>
                       </div>
                     </div>
@@ -1598,10 +1604,7 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
-
-
 
                 <div class="elementor-element elementor-element-657f6d5 e-con-full e-flex e-con e-child"
                   data-id="657f6d5" data-element_type="container">
@@ -1621,7 +1624,6 @@
               </div>
             </div>
           </div>
-
 
           <!-- <div class="elementor-element elementor-element-7607697 e-con-full e-flex e-con e-parent" data-id="7607697"
             data-element_type="container">
@@ -2005,10 +2007,8 @@
                       class="elementor-element elementor-element-dea7f23 elementor-widget elementor-widget-text-editor"
                       data-id="dea7f23" data-element_type="widget" data-widget_type="text-editor.default">
                       <div class="elementor-widget-container">
-
-                        © 2025 Asian Women Marketing,<br>
+                        © 2025 Asian Women Marketing,<br />
                         All Rights Reserved
-
                       </div>
                     </div>
                     <div
