--- a/index.html
+++ b/index.html
@@ -737,13 +737,17 @@
                               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-16 current_page_item parent hfe-creative-menu">
                               <a href="/" class="hfe-menu-item">Home</a>
                             </li>
-                            <li id="menu-item-22"
+                            <!-- <li id="menu-item-22"
                               class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
                               <a href="#features" class="hfe-menu-item">Features</a>
-                            </li>
+                            </li> -->
                             <li id="menu-item-23"
                               class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home parent hfe-creative-menu">
                               <a href="#highlights" class="hfe-menu-item">Highlights</a>
+                            </li>
+                            <li id="menu-item-24"
+                              class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu">
+                              <a href="./services.html" class="hfe-menu-item">Services</a>
                             </li>
                             <li id="menu-item-24"
                               class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu">
@@ -1310,6 +1314,8 @@
         <div class="e-con-inner"></div>
       </div>
 
+
+
       <div
         class="elementor-element elementor-element-01a51c7 e-con-full image-hover-parent animated-slow e-flex e-con e-parent"
         data-id="01a51c7" data-element_type="container"
@@ -1394,6 +1400,100 @@
               data-id="ccf2d61" data-element_type="widget" data-widget_type="text-editor.default">
               <div class="elementor-widget-container">
                 Join the festival without any entry fee with lively and engaging atmosphere!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <div
+        class="elementor-element elementor-element-01a51c7 e-con-full image-hover-parent animated-slow e-flex e-con e-parent"
+        data-id="01a51c7" data-element_type="container"
+        data-settings='{"background_background":"classic","animation":"none"}'>
+        <div
+          class="elementor-element elementor-element-a125c94 e-con-full hover-image hover-image-1 e-flex e-con e-child"
+          data-id="a125c94" data-element_type="container" data-settings='{"background_background":"classic"}'>
+          <div class="elementor-element elementor-element-a6680a2 e-con-full image-hover-content e-flex e-con e-child"
+            data-id="a6680a2" data-element_type="container">
+            <div class="elementor-element elementor-element-50cd8e5 elementor-widget elementor-widget-heading"
+              data-id="50cd8e5" data-element_type="widget" data-widget_type="heading.default">
+              <div class="elementor-widget-container">
+                <h2 class="elementor-heading-title elementor-size-default">
+                  WEB/APP DEVELOPMENT
+                </h2>
+              </div>
+            </div>
+            <div class="elementor-element elementor-element-7e1133b elementor-widget elementor-widget-text-editor"
+              data-id="7e1133b" data-element_type="widget" data-widget_type="text-editor.default">
+              <div class="elementor-widget-container">
+                Enhance your online presence by engaging your audience with responsive web and app
+                applications.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="elementor-element elementor-element-c420e76 e-con-full hover-image hover-image-2 e-flex e-con e-child"
+          data-id="c420e76" data-element_type="container" data-settings='{"background_background":"classic"}'>
+          <div class="elementor-element elementor-element-fdeea0f e-con-full image-hover-content e-flex e-con e-child"
+            data-id="fdeea0f" data-element_type="container">
+            <div class="elementor-element elementor-element-07e5327 elementor-widget elementor-widget-heading"
+              data-id="07e5327" data-element_type="widget" data-widget_type="heading.default">
+              <div class="elementor-widget-container">
+                <h2 class="elementor-heading-title elementor-size-default">
+                  DIGITAL MARKETING & SEO
+                </h2>
+              </div>
+            </div>
+            <div class="elementor-element elementor-element-4357eb7 elementor-widget elementor-widget-text-editor"
+              data-id="4357eb7" data-element_type="widget" data-widget_type="text-editor.default">
+              <div class="elementor-widget-container">
+                We are with you in everything from
+                SEO to social media. Let's conquer the digital landscape.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="elementor-element elementor-element-615e41d e-con-full hover-image hover-image-3 e-flex e-con e-child"
+          data-id="615e41d" data-element_type="container" data-settings='{"background_background":"classic"}'>
+          <div class="elementor-element elementor-element-608cd64 e-con-full image-hover-content e-flex e-con e-child"
+            data-id="608cd64" data-element_type="container">
+            <div class="elementor-element elementor-element-371af5d elementor-widget elementor-widget-heading"
+              data-id="371af5d" data-element_type="widget" data-widget_type="heading.default">
+              <div class="elementor-widget-container">
+                <h2 class="elementor-heading-title elementor-size-default">
+                  GRAPHIC DESIGNING
+                </h2>
+              </div>
+            </div>
+            <div class="elementor-element elementor-element-e193ee3 elementor-widget elementor-widget-text-editor"
+              data-id="e193ee3" data-element_type="widget" data-widget_type="text-editor.default">
+              <div class="elementor-widget-container">
+                We turn ideas into inspiring and engaging insights that make
+                a lasting impact for your brand.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="elementor-element elementor-element-443a48b e-con-full hover-image hover-image-4 e-flex e-con e-child"
+          data-id="443a48b" data-element_type="container" data-settings='{"background_background":"classic"}'>
+          <div class="elementor-element elementor-element-b4b6715 e-con-full image-hover-content e-flex e-con e-child"
+            data-id="b4b6715" data-element_type="container">
+            <div class="elementor-element elementor-element-7690f70 elementor-widget elementor-widget-heading"
+              data-id="7690f70" data-element_type="widget" data-widget_type="heading.default">
+              <div class="elementor-widget-container">
+                <h2 class="elementor-heading-title elementor-size-default">
+                  META ADVERTISEMENT
+                </h2>
+              </div>
+            </div>
+            <div class="elementor-element elementor-element-ccf2d61 elementor-widget elementor-widget-text-editor"
+              data-id="ccf2d61" data-element_type="widget" data-widget_type="text-editor.default">
+              <div class="elementor-widget-container">
+                Unlock limitless potential with our innovative solutions that transcend the ordinary.
               </div>
             </div>
           </div>
