--- a/index.html
+++ b/index.html
@@ -2420,7 +2420,7 @@
                     <div class="elementor-element elementor-element-6dec381 elementor-widget elementor-widget-image"
                       data-id="6dec381" data-element_type="widget" data-widget_type="image.default">
                       <div class="elementor-widget-container">
-                        <a href="/" target="_blank">
+                        <a href="https://www.tiktok.com/@saira.faisal?_t=ZS-8uqJeaL8uPK&_r=1" target="_blank">
                           <img width="147" height="150"
                             src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20147%20150'%3E%3C/svg%3E"
                             class="attachment-thumbnail size-thumbnail wp-image-3304" alt=""
@@ -2434,7 +2434,7 @@
                     <div class="elementor-element elementor-element-cefd0a2 elementor-widget elementor-widget-image"
                       data-id="cefd0a2" data-element_type="widget" data-widget_type="image.default">
                       <div class="elementor-widget-container">
-                        <a href="/" target="_blank">
+                        <a href="https://www.facebook.com/share/18BnQok48v/?mibextid=wwXIfr" target="_blank">
                           <img width="147" height="150"
                             src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20147%20150'%3E%3C/svg%3E"
                             class="attachment-thumbnail size-thumbnail wp-image-3305" alt=""
@@ -2448,7 +2448,7 @@
                     <div class="elementor-element elementor-element-5aafaa9 elementor-widget elementor-widget-image"
                       data-id="5aafaa9" data-element_type="widget" data-widget_type="image.default">
                       <div class="elementor-widget-container">
-                        <a href="/" target="_blank">
+                        <a href="https://www.instagram.com/saira_faisal_awm?igsh=dGF2eW83MjlibmE2" target="_blank">
                           <img width="147" height="150"
                             src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20147%20150'%3E%3C/svg%3E"
                             class="attachment-thumbnail size-thumbnail wp-image-3306" alt=""
@@ -2459,10 +2459,10 @@
                         </a>
                       </div>
                     </div>
-                    <div class="elementor-element elementor-element-5b3a070 elementor-widget elementor-widget-image"
+                    <!-- <div class="elementor-element elementor-element-5b3a070 elementor-widget elementor-widget-image"
                       data-id="5b3a070" data-element_type="widget" data-widget_type="image.default">
                       <div class="elementor-widget-container">
-                        <a href="/" target="_blank">
+                        <a href="https://www.tiktok.com/@saira.faisal?_t=ZS-8uqJeaL8uPK&_r=1" target="_blank">
                           <img width="147" height="150"
                             src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20147%20150'%3E%3C/svg%3E"
                             class="attachment-thumbnail size-thumbnail wp-image-3307" alt=""
@@ -2472,7 +2472,7 @@
                               class="attachment-thumbnail size-thumbnail wp-image-3307" alt="" /></noscript>
                         </a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
