Initial push or update project

--- a/contact.html
+++ b/contact.html
@@ -1513,7 +1513,7 @@
                         class="elementor-element elementor-element-109b464 elementor-widget elementor-widget-text-editor"
                         data-id="109b464" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                          <a href="mailto:info@gtafestival.ca">info@gtafestival.ca
+                          <a href="mailto:asianwomenteam@gmail.com">asianwomenteam@gmail.com
                           </a>
                         </div>
                       </div>
@@ -1547,7 +1547,7 @@
                           <div class="elementor-social-icons-wrapper elementor-grid">
                             <span class="elementor-grid-item">
                               <a class="elementor-icon elementor-social-icon elementor-social-icon-tiktok elementor-repeater-item-3416515"
-                                href="https://www.tiktok.com/@gta.ramadan.festi" target="_blank">
+                                href="https://www.tiktok.com/@saira.faisal?_t=ZS-8uqJeaL8uPK&_r=1" target="_blank">
                                 <span class="elementor-screen-only">Tiktok</span>
                                 <svg class="e-font-icon-svg e-fab-tiktok" viewBox="0 0 448 512"
                                   xmlns="http://www.w3.org/2000/svg">
@@ -1559,7 +1559,7 @@
                             </span>
                             <span class="elementor-grid-item">
                               <a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-repeater-item-0054ab1"
-                                href="https://www.facebook.com/gtaramadhanfestival/" target="_blank">
+                                href="https://www.facebook.com/share/18BnQok48v/?mibextid=wwXIfr" target="_blank">
                                 <span class="elementor-screen-only"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="15" viewBox="0 0 9 15"
                                   fill="none">
@@ -1571,7 +1571,7 @@
                             </span>
                             <span class="elementor-grid-item">
                               <a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-repeater-item-0712726"
-                                href="https://www.instagram.com/gtaramadanfestival/" target="_blank">
+                                href="https://www.instagram.com/saira_faisal_awm?igsh=dGF2eW83MjlibmE2" target="_blank">
                                 <span class="elementor-screen-only"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
                                   fill="none">
@@ -1587,7 +1587,7 @@
                                 </svg>
                               </a>
                             </span>
-                            <span class="elementor-grid-item">
+                            <!-- <span class="elementor-grid-item">
                               <a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-repeater-item-8d14d4f"
                                 href="https://www.youtube.com/@GTARamadan-zg7pb" target="_blank">
                                 <span class="elementor-screen-only"></span>
@@ -1598,7 +1598,7 @@
                                     fill="white"></path>
                                 </svg>
                               </a>
-                            </span>
+                            </span> -->
                           </div>
                         </div>
                       </div>
@@ -1614,8 +1614,8 @@
                       <iframe src="about:blank" width="600" height="450" style="border: 0" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                         data-rocket-lazyload="fitvidscompatible"
-                        data-lazy-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.905069779386!2d-79.6797479!3d43.6709441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3ee3bcaf5317%3A0x907e7814532f7b27!2sRed%20Rose%20Convention%20Centre!5e0!3m2!1sen!2s!4v1727894317867!5m2!1sen!2s"></iframe><noscript><iframe
-                          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.905069779386!2d-79.6797479!3d43.6709441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3ee3bcaf5317%3A0x907e7814532f7b27!2sRed%20Rose%20Convention%20Centre!5e0!3m2!1sen!2s!4v1727894317867!5m2!1sen!2s"
+                        data-lazy-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.17510493812!2d-79.66156582459577!3d43.66532795164747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3f29d2a1b981%3A0xfdf6862eb4016c1c!2sCapitol%20Banquet%20Centre!5e0!3m2!1sen!2s!4v1742877965338!5m2!1sen!2s"></iframe><noscript><iframe
+                          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.17510493812!2d-79.66156582459577!3d43.66532795164747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3f29d2a1b981%3A0xfdf6862eb4016c1c!2sCapitol%20Banquet%20Centre!5e0!3m2!1sen!2s!4v1742877965338!5m2!1sen!2s"
                           width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
                           referrerpolicy="no-referrer-when-downgrade"></iframe></noscript>
                     </div>
