--- a/services.html
+++ b/services.html
@@ -1150,7 +1150,8 @@
                 data-id="01a51c7" data-element_type="container"
                 data-settings='{"background_background":"classic","animation":"none"}'>
                 <div class="elementor-element elementor-element-a125c94 e-con-full hover-image hover-image-1 e-flex e-con e-child"
-                    data-id="a125c94" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="a125c94" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/web.jpeg);">
                     <div class="elementor-element elementor-element-a6680a2 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="a6680a2" data-element_type="container">
                         <div class="elementor-element elementor-element-50cd8e5 elementor-widget elementor-widget-heading"
@@ -1171,7 +1172,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-c420e76 e-con-full hover-image hover-image-2 e-flex e-con e-child"
-                    data-id="c420e76" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="c420e76" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/app.jpeg);">
                     <div class="elementor-element elementor-element-fdeea0f e-con-full image-hover-content e-flex e-con e-child"
                         data-id="fdeea0f" data-element_type="container">
                         <div class="elementor-element elementor-element-07e5327 elementor-widget elementor-widget-heading"
@@ -1192,7 +1194,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-615e41d e-con-full hover-image hover-image-3 e-flex e-con e-child"
-                    data-id="615e41d" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="615e41d" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/wordpress.jpg);">
                     <div class="elementor-element elementor-element-608cd64 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="608cd64" data-element_type="container">
                         <div class="elementor-element elementor-element-371af5d elementor-widget elementor-widget-heading"
@@ -1213,7 +1216,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-443a48b e-con-full hover-image hover-image-4 e-flex e-con e-child"
-                    data-id="443a48b" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="443a48b" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/digital.jpg);">
                     <div class="elementor-element elementor-element-b4b6715 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="b4b6715" data-element_type="container">
                         <div class="elementor-element elementor-element-7690f70 elementor-widget elementor-widget-heading"
@@ -1239,7 +1243,8 @@
                 data-id="01a51c7" data-element_type="container"
                 data-settings='{"background_background":"classic","animation":"none"}'>
                 <div class="elementor-element elementor-element-a125c94 e-con-full hover-image hover-image-1 e-flex e-con e-child"
-                    data-id="a125c94" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="a125c94" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/social.avif);">
                     <div class="elementor-element elementor-element-a6680a2 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="a6680a2" data-element_type="container">
                         <div class="elementor-element elementor-element-50cd8e5 elementor-widget elementor-widget-heading"
@@ -1260,7 +1265,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-c420e76 e-con-full hover-image hover-image-2 e-flex e-con e-child"
-                    data-id="c420e76" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="c420e76" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/graphic.jpg);">
                     <div class="elementor-element elementor-element-fdeea0f e-con-full image-hover-content e-flex e-con e-child"
                         data-id="fdeea0f" data-element_type="container">
                         <div class="elementor-element elementor-element-07e5327 elementor-widget elementor-widget-heading"
@@ -1281,7 +1287,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-615e41d e-con-full hover-image hover-image-3 e-flex e-con e-child"
-                    data-id="615e41d" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="615e41d" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/meta.png);">
                     <div class="elementor-element elementor-element-608cd64 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="608cd64" data-element_type="container">
                         <div class="elementor-element elementor-element-371af5d elementor-widget elementor-widget-heading"
@@ -1302,7 +1309,8 @@
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-443a48b e-con-full hover-image hover-image-4 e-flex e-con e-child"
-                    data-id="443a48b" data-element_type="container" data-settings='{"background_background":"classic"}'>
+                    data-id="443a48b" data-element_type="container" data-settings='{"background_background":"classic"}'
+                    style="background-image: url(./assets/images/social.avif);">
                     <div class="elementor-element elementor-element-b4b6715 e-con-full image-hover-content e-flex e-con e-child"
                         data-id="b4b6715" data-element_type="container">
                         <div class="elementor-element elementor-element-7690f70 elementor-widget elementor-widget-heading"
