--- a/vendor.html
+++ b/vendor.html
@@ -856,7 +856,7 @@
 							<div class="elementor-widget-container">
 								<div class="elementor-button-wrapper">
 									<a class="elementor-button elementor-button-link elementor-size-sm"
-										href="https://gtafestival.ca/vendor/#intent-participate">
+										href="#intent-participate">
 										<span class="elementor-button-content-wrapper">
 											<span class="elementor-button-text">Become a Vendor</span>
 										</span>
