--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     <link rel="pingback" href="https://gtafestival.ca/xmlrpc.php" />
-    <title>testing website</title>
+    <title>AWM - Services</title>
     <link rel="preload" as="style" href="./styles/1.css" />
     <link rel="stylesheet" href="./styles/2.css" media="print" onload="this.media='all'" />
     <noscript>
